Fix error in layout on IOS

--- a/src/sass/blog/atom-light.scss
+++ b/src/sass/blog/atom-light.scss
@@ -10,7 +10,7 @@
   background-color: #E3F2FD;
   color: #555555;
   display: block;
-  max-height: 300px;
+  //max-height: 300px;
   overflow: auto;
 }
 .editor .invisible-character {
